--- a/_config.yml
+++ b/_config.yml
@@ -3,4 +3,4 @@ title: "UCSD Data Science Capstone Projects: 2020-2021"
 source: .
 destination: _site
 url: "https://dsc-capstone.github.io/projects-current"
-permalink: /:url/
+permalink: /:name/
