ignore projects in build

--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,4 @@ source: .
 destination: _site
 url: "https://dsc-capstone.github.io/projects-current"
 permalink: /:name/
+exclude: [projects, reports]
